test/CheckError/Datatype/CopyPartiallyNonCopyableDatatype.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() {
	// Not implicitly copyable.
}

datatype TestDatatype(TestClass object);

TestDatatype doImplicitCopy(TestDatatype value) {
	// CHECK: .loci:12:2: error: unable to copy type 'TestDatatype' because it doesn't have a valid 'implicitcopy' method, in cast from type 'TestDatatype&' to type 'TestDatatype'
	return value;
}

// CHECK: 1 error generated.
